# ecommerce-env

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app.py  baseline.py  client.py  ecommerce_environment.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
ecommerce_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
ecommerce_env/server/: Dockerfile  __init__.py  app.py  ecommerce_env_environment.py
scripts/: push_space.sh  run_local.sh
server/: app.py  ecommerce_environment.py
